2021-03-31  Oliver Kiddle  <opk@zsh.org>

	* github #74: Caleb Maclennan: Completion/Unix/Command/_vcsh:
	Drop vcsh completions, maintained upstream

	* Marlon Richert: 48214: Completion/Base/Completer/_expand,
	Test/Y01completion.ztst: add file types to _expand completions,
	so they can be colored through complist

	* Christian K: 48192: Completion/Unix/Command/_openstack:
	Fix openstack completion for new style clients

	* Marc Chantreux: users/26557: Completion/Unix/Command/_surfraw:
	add bookmarks support and remove the header from the final list

2021-03-29  Aleksandr Mezin  <mezin.alexander@gmail.com>

	* 47561 (the git and cvs parts) (compare 44919 + 44920):
	Functions/VCS_Info/Backends/VCS_INFO_detect_cvs,
	Functions/VCS_Info/Backends/VCS_INFO_detect_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_cvs,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: vcs_info
	internals: cvs, git: Set ${vcs_comm[basedir]} like all other
	backends do.

2021-03-29  dana  <dana@dana.is>

	* 47737: Completion/Zsh/Command/_zstyle: Fix option completion
	when positional arguments are already present (regression from
	workers/39659 (commit ae3b675ce6e4ac62451ea08169c2b4dc45cf533b))

2021-03-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: ChangeLog: Fix X-Seq numbers for the 39657, 39658,
	39659 patch series.

	* unposted: Doc/Zsh/compsys.yo: docs: _arguments: Fix a typo
	in the example.

2021-03-28  Oliver Kiddle  <opk@zsh.org>

	* Jacob Gelbman: 48166: Completion/Unix/Command/_ctags:
	add completion for language options

	* Arseny Maslennikov: 48210, 48211:
	Completion/Linux/Command/_setpriv: new completion for setpriv(1)

	* Arseny Maslennikov: 48212: Completion/Linux/Type/_capabilities:
	Introduce new completion for Linux task capabilities

	* Štěpán Němec: 48231: Completion/Unix/Command/_git:
	add missing --pretty formats and improve descriptions

	* 48230, 48233 (Jun T): Completion/Solaris/Command/_dtrace:
	completion of dtrace probes and runtime options
